<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pilih_kelas"
            android:paddingEnd="10dp"
            tools:ignore="RtlSymmetry" />

        <Spinner
            android:id="@+id/pilihKelas"
            android:layout_width="150dp"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/jml_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/jumlah_data"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>


    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:scrollbarAlwaysDrawVerticalTrack="true" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/tambah_data1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="50dp"
        android:text="@string/simpan_data"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:backgroundTint="@color/design_default_color_secondary_variant"
        app:icon="@drawable/ic_add_24"
        app:iconTint="@android:color/white" />

    <Button
        android:id="@+id/logout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginLeft="70dp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>


